# cosmic-ext-redeye

./: Cargo.toml  README.md  justfile
i18n/en/: cosmic_ext_redeye.ftl
i18n/sv/: cosmic_ext_redeye.ftl
resources/: app.desktop  app.metainfo.xml
src/: app.rs  blue_light.rs  main.rs
